# liro

./: README.md  erp.code-workspace
backend/: Cargo.toml
backend/entity/: Cargo.toml
backend/macros/: Cargo.toml
backend/macros/src/: lib.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_init.rs
backend/src/: main.rs  state.rs
backend/src/err/: mod.rs
backend/src/handlers/: contacts.rs  docs.rs  info.rs  ledger_accounts.rs  ledger_transactions.rs  mod.rs  products.rs  purchase_invoice_lines.rs  purchase_invoices.rs  purchase_order_lines.rs  purchase_orders.rs  sale_invoice_lines.rs  sale_invoices.rs  sale_order_lines.rs  sale_orders.rs  stock_moves.rs  stocks.rs  taxes.rs  users.rs  variants.rs
backend/src/models/: contacts.rs  ledger_accounts.rs  ledger_transaction.rs  mod.rs  page.rs  products.rs  purchase_invoice_lines.rs  purchase_invoices.rs  purchase_order_lines.rs  purchase_orders.rs  sale_invoice_lines.rs  sale_invoices.rs  sale_order_lines.rs  sale_orders.rs  stock_moves.rs  stocks.rs  taxes.rs  users.rs  variants.rs
backend/src/repositories/: contacts.rs  ledger_accounts.rs  ledger_transactions.rs  mod.rs  products.rs  stock_moves.rs  stocks.rs  taxes.rs  users.rs  variants.rs
backend/src/tests/: contacts_create.rs  contacts_delete.rs  contacts_get.rs  contacts_list.rs  ledger_accounts_create.rs  ledger_accounts_delete.rs  ledger_accounts_get.rs  ledger_accounts_list.rs  ledger_transactions_create.rs  ledger_transactions_delete.rs  ledger_transactions_get.rs  ledger_transactions_list.rs  mod.rs  products_create.rs  (+24 more)
(+58 files in other folders)
